--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "API Web Tasks Manager",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon src/app.js",
+    "test": "nodemon src/app.js"
   },
   "repository": {
     "type": "git",
@@ -22,5 +23,11 @@
   "bugs": {
     "url": "https://github.com/javiboin/gestor-de-tareas/issues"
   },
-  "homepage": "https://github.com/javiboin/gestor-de-tareas#readme"
+  "homepage": "https://github.com/javiboin/gestor-de-tareas#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "nodemon": "^3.1.10"
+  }
 }
